k8s-deployment/pod1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: pod1
  name: php-deployment-1
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: pod1
  template: 
    metadata: 
      labels: 
        app: pod1
    spec: 
      containers: 
        - name: pod1
          image: "mm804/demo-php"
          ports: 
            - containerPort: 8000
