k8s-deployment/pod3.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: pod3
  name: php-deployment-3
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: pod3
  template: 
    metadata: 
      labels: 
        app: pod3
    spec: 
      containers: 
        - name: pod3
          image: "mm804/demo-php"
          ports: 
            - containerPort: 8000
