k8s-deployment/pod1-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pod1-svc
spec:
  ports:
    - port: 9001
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
      app: pod1
