k8s-deployment/pod2-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pod2-svc
spec:
  ports:
    - port: 9002
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
      app: pod2
