k8s-deployment/pod3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pod3-svc
spec:
  ports:
    - port: 9003
      targetPort: 8000
      protocol: TCP
  type: NodePort
  selector:
      app: pod3
